--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -85,7 +85,7 @@
 						/* 设置背景颜色为黑色 */
 						border: 4px solid #747981;
 						/* width: 680px; */
-						width: 100%;
+						/*width: 100%;*/
 						height: 100px;
 						font-weight: bold;
 						font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
