--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -7,7 +7,7 @@
   <script src="static/js/jquery.min.js?v=1.0"></script>
   {{ moment.include_moment() }}
   <style>
-    @import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600");
+
     .more-pens {
       position: fixed;
       left: 20px;
@@ -91,7 +91,7 @@
 <body>
   <div class="title">
     
-    <h2>填写完成，等一下哦</h2>
+    <h3>填写完成，请静候通知</h3>
     <h1>{{user}}</h1>
   
   
