textarea height and width

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -86,7 +86,7 @@
 						border: 4px solid #747981;
 						/* width: 680px; */
 						/*width: 100%;*/
-						height: 100px;
+						/*height: 100px*/
 						font-weight: bold;
 						font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 					}
