--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -76,7 +76,7 @@
 				</span>
 				<br>
 
-				<textarea class="myinput myinput--kuro textarea" id="t" name="about">请输入个人简介</textarea>
+				<textarea class="myinput myinput--kuro textarea" id="t" rows=10 name="about">请输入个人简介</textarea>
 				<style>
 					.textarea {
 						color: #6a7989;
