--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -90,9 +90,12 @@
 
 <body>
   <div class="title">
-    
+      <h1>{{user}}</h1>
+      <br>
+    <h3>恭喜你</h3>
     <h3>填写完成，请静候通知</h3>
-    <h1>{{user}}</h1>
+    
+    
   
   
   </div>
