--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,151 +1,84 @@
 <!DOCTYPE html>
-<html lang="zh" class="no-js">
+<html>
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>欢迎来到ACM</title>
-	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="static/fonts/font-awesome-4.2.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="static/css/demo.css" />
-	<link rel="stylesheet" type="text/css" href="static/css/component.css" />
 
-	<!--[if IE]>
-  		<script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.min.js"></script>
-		<![endif]-->
+    <title>Flasky</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
 
-	<div class="containermy">
-		<section class="content bgcolor-4">
-			<header class="codrops-header">
-				<h1>ACM工作室<span>欢迎你的加入</span></h1>
-			</header>
-			<!--  </section>
-			<section class="content bgcolor-4">
-				-->
-			<h2>小石器，请填写资料</h2>
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">主页</a></li>
+                    <li><a href="/register">填写个人简介</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
-			<form action="/" method="post">
-				<span class="input input--kuro">
-					<input class="input__field input__field--kuro" type="text" id ="username" name="username" />
-					<label class="input__label input__label--kuro" for="username">
-						<span class="input__label-content input__label-content--kuro">姓名</span>
-				</label>
-				</span>
-
-				<span class="input input--kuro">
-					<input class="input__field input__field--kuro" type="text" id ="sex" name="sex" />
-					<label class="input__label input__label--kuro" for="sex">
-						<span class="input__label-content input__label-content--kuro">性别</span>
-				</label>
-				</span>
-				<br>
-
-				<span class="input input--kuro">
-					<input class="input__field input__field--kuro" type="text" id ="telnumber" name="telnumber" />
-					<label class="input__label input__label--kuro" for="telnumber">
-						<span class="input__label-content input__label-content--kuro">电话</span>
-				</label>
-				</span>
-
-				<span class="input input--kuro">
-					<input class="input__field input__field--kuro" type="text" id ="major" name="major" />
-					<label class="input__label input__label--kuro" for="major">
-						<span class="input__label-content input__label-content--kuro">院系及专业</span>
-				</label>
-				</span>
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-12 column">
+                <div class="jumbotron">
+                    <h1>
+                        ACM协会简介!
+                    </h1>
+                    <p>
+                        ACM工作室隶属电子信息工程学院，是学校为了应对一年一度的acm程序设计大赛而成立的社团，ACM竞赛规定每支参赛队伍由三名在校大学生组成，他们需要在规定的五个小时内解决八个或更多的复杂实际编程问题。每队使用一台电脑，参赛者争分夺秒，与其他参赛队伍拼比逻辑、策略和心理素质....
+                    </p>
+                    <p>
+                         <a class="btn btn-primary btn-large" href="{{ url_for('main.acm') }}">阅读更多</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-				<br>
-				<span class="input input--kuro">
-						<input class="input__field input__field--kuro" type="text" id ="mail" name="mail" />
-						<label class="input__label input__label--kuro" for="mail">
-						<span class="input__label-content input__label-content--kuro">邮箱</span>
-				</label>
-				</span>
-				
-				<span class="input input--kuro">
-					<input class="input__field input__field--kuro" type="text" id ="major" name="major" />
-					<label class="input__label input__label--kuro" for="major">
-					<span class="input__label-content input__label-content--kuro">major</span>
-				</label>
-				</span>
-				<br>
 
-				<textarea class="myinput myinput--kuro textarea" id="t" rows=10 name="about">请输入个人简介</textarea>
-				<style>
-					.textarea {
-						color: #6a7989;
-						/* 设置文本颜色为红色 */
-						background-color: #34343C;
-						/* 设置背景颜色为黑色 */
-						border: 4px solid #747981;
-						/* width: 680px; */
-						/*width: 100%;*/
-						/*height: 100px*/
-						font-weight: bold;
-						font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-					}
-					.containermy {
-						margin: 0 auto;
-						text-align: center;
-						overflow: hidden;
-						}
-						
-				</style>
-				<br><br><br>
 
-				<div class="col-md-12 column">
-					<button type="submit" class="btn btn-primary btn-lg">提交</button>
-				</div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.3.1/moment-with-langs.min.js"></script>
+    <script>
+        function flask_moment_render(elem) {
+            $(elem).text(eval('moment("' + $(elem).data('timestamp') + '").' + $(elem).data('format') + ';'));
+            $(elem).removeClass('flask-moment');
+        }
 
-			</form>
-			
-		</section>
-		<section class="content bgcolor-4"></section>
-
-	</div>
-	<script src="/static/js/classie.js"></script>
-	<script>
-		(function () {
-			// trim polyfill : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/Trim
-			if (!String.prototype.trim) {
-				(function () {
-					// Make sure we trim BOM and NBSP
-					var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
-					String.prototype.trim = function () {
-						return this.replace(rtrim, '');
-					};
-				})();
-			}
-
-			[].slice.call(document.querySelectorAll('input.input__field')).forEach(function (inputEl) {
-				// in case the input is already filled..
-				if (inputEl.value.trim() !== '') {
-					classie.add(inputEl.parentNode, 'input--filled');
-				}
-
-				// events:
-				inputEl.addEventListener('focus', onInputFocus);
-				inputEl.addEventListener('blur', onInputBlur);
-			});
-
-			function onInputFocus(ev) {
-				classie.add(ev.target.parentNode, 'input--filled');
-			}
-
-			function onInputBlur(ev) {
-				if (ev.target.value.trim() === '') {
-					classie.remove(ev.target.parentNode, 'input--filled');
-				}
-			}
-		})();
-	</script>
-
+        function flask_moment_render_all() {
+            $('.flask-moment').each(function () {
+                flask_moment_render(this);
+                if ($(this).data('refresh')) {
+                    (function (elem, interval) {
+                        setInterval(function () {
+                            flask_moment_render(elem)
+                        }, interval);
+                    })(this, $(this).data('refresh'));
+                }
+            })
+        }
+        $(document).ready(function () {
+            flask_moment_render_all();
+        });
+    </script>
 
 </body>
 
