--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>欢迎你,{{user}}</title>
+  <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="static/favicon.ico" type="image/x-icon">
   <script src="static/js/jquery.min.js?v=1.0"></script>
   {{ moment.include_moment() }}
   <style>
