更改一短话

--- a/app/templates/acm.html
+++ b/app/templates/acm.html
@@ -58,7 +58,7 @@
                     <p> ACM工作室隶属电子信息工程学院，是学校为了应对一年一度的acm程序设计大赛而成立的社团，ACM竞赛规定每支参赛队伍由三名在校大学生组成，他们需要在规定的五个小时内解决八个或更多的复杂实际编程问题。每队使用一台电脑，参赛者争分夺秒，与其他参赛队伍拼比逻辑、策略和心理素质。</p>
                     <p><br> 介于加入qq群的各位同学中，有非电院、文理学院，以及之前并未接触过的同学，可能还不是很了解编程，我们知道，生活中我们所运用的到程序是由数据和指令按照一定的顺序组合而成的，而把程序和指令按照特定排列组合的这一过程，我们就称为编程</p>
                     <p><br></p>
-                    <p> 再用一种简单的方法来让同学们理解，同学们应该都用过电脑吧，电脑中有一个黑框框之类的窗口，我们称之为命令提示符，如果我们想在这个黑窗口中输入一个心形，就想这样，我们应该怎么做呢!</p>
+                    <p> 再用一种简单的方法来让同学们理解，同学们应该都用过电脑吧，电脑中有一个黑框框之类的窗口，我们称之为命令提示符，如果我们想在这个黑窗口中输入一个心形，就像这样，我们应该怎么做呢!</p>
                     <noscript>&lt;img src="heart.jpg" data-rawwidth="438" data-rawheight="438"
                         class="origin_image zh-lightbox-thumb" width="438" data-original="https://pic3.zhimg.com/v2-7adec096f591d0169d02b4f9a361e2fe_r.jpg"&gt;</noscript>
                     <img
